chore: combine frontend and backend into a monolith during production

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,21 @@
 # QuickBooks OAuth Credentials
 # Get these from https://developer.intuit.com
-CLIENT_ID=ABa9Ilt6HX8x9zoI0GyaUjXTE388mYtdH0iZ9lZw6drF9qP1ZP
-CLIENT_SECRET=dE5LnGTokPsgFj8qUhoO6PeJHIEhBq1d7xLFOIb9
-REDIRECT_URI=http://localhost:3000/callback
+CLIENT_ID=your_client_id_here
+CLIENT_SECRET=your_client_secret_here
+REDIRECT_URI=http://localhost:3000/redirect
+FRONTEND_URL=http://127.0.0.1:5173
 
-# Environment
+# Environment (sandbox or production)
 ENVIRONMENT=sandbox
-# Change to 'production' when ready to go live
+
+# Session Secret (generate a random string)
+SESSION_SECRET=your_random_session_secret_here
+
+# Database (optional)
+SUPABASE=your_database_connection_string_here
 
 # Server
 PORT=3000
+
+# Node Environment (development or production)
+NODE_ENV=development
