chore: remove hard coded sandbox urls and use .env var to determine instead

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,9 +3,12 @@
 CLIENT_ID=your_client_id_here
 CLIENT_SECRET=your_client_secret_here
 REDIRECT_URI=http://localhost:3000/redirect
-FRONTEND_URL=http://127.0.0.1:5173
+FRONTEND_URL=http://localhost:5173
 
-# Environment (sandbox or production)
+# QuickBooks Environment
+# Options: 'sandbox' or 'production'
+# - sandbox: Uses sandbox-quickbooks.api.intuit.com (for testing)
+# - production: Uses quickbooks.api.intuit.com (for live data)
 ENVIRONMENT=sandbox
 
 # Session Secret (generate a random string)
