--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,9 @@
 # Backend API URL
-VITE_API_URL=http://localhost:3000/api
+# Development: Points to local Express server
+# Production: Can be changed to your deployed backend URL
+VITE_API_URL=http://localhost:3000
+
+# QuickBooks Environment (for display/debugging purposes only)
+# The actual environment is controlled by the backend
+# Options: 'sandbox' or 'production'
+VITE_QBO_ENVIRONMENT=sandbox
