--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,17 @@
     "start": "NODE_ENV=production node dist/server.js"
   },
   "dependencies": {
+    "@types/pg": "^8.16.0",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.22.1",
     "express-session": "^1.18.2",
-    "intuit-oauth": "^4.2.2"
+    "intuit-oauth": "^4.2.2",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.2",
