fix: disconbobulate invoices api route and page

--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -2,8 +2,8 @@
 # Get these from https://developer.intuit.com (Production Keys tab)
 CLIENT_ID=your_production_client_id
 CLIENT_SECRET=your_production_client_secret
-REDIRECT_URI=https://your-app-name.up.railway.app/redirect
-FRONTEND_URL=https://your-app-name.up.railway.app
+REDIRECT_URI=https://your-app-name.onrender.com/redirect
+FRONTEND_URL=https://your-app-name.onrender.com
 
 # Environment - MUST be 'production' for live QuickBooks
 ENVIRONMENT=production
@@ -13,10 +13,7 @@ ENVIRONMENT=production
 SESSION_SECRET=your_production_session_secret
 
 # Supabase PostgreSQL Connection String
-SUPABASE=postgresql://postgres.xxxxx:password@aws-x-xx-xxxx-x.pooler.supabase.com:6543/postgres
+SUPABASE=postgresql://postgres.qraknmrvtpvshgrpltow:9S1TBYB7PxskNAUo@aws-1-eu-west-1.pooler.supabase.com:6543/postgres
 
-# Server Port (Railway sets this automatically)
-PORT=3000
-
-# Node Environment
+# Node Environment (Render sets PORT automatically, no need to specify)
 NODE_ENV=production
