--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,11 @@
     "start": "NODE_ENV=production node dist/server.js"
   },
   "dependencies": {
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.2",
+    "@types/node": "^20.10.5",
     "@types/pg": "^8.16.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
@@ -18,15 +23,10 @@
     "express": "^4.22.1",
     "express-session": "^1.18.2",
     "intuit-oauth": "^4.2.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/connect-pg-simple": "^7.0.3",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.2",
-    "@types/node": "^20.10.5",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "tsx": "^4.7.0"
   }
 }
